--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="wrap">
     <video
-      src="./video.mp4"
+      src="newnal_01_pc_01.mp4"
       autoplay
       muted
       loop
